kubernetes/raspberry-pi/auth/oathkeeper/service-oathkeeper-api.yml
apiVersion: v1
kind: Service
metadata:
  name: oathkeeper-api
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http-api
  selector:
    app.kubernetes.io/instance: oathkeeper
    app.kubernetes.io/name: oathkeeper
  type: ClusterIP
