kubernetes/raspberry-pi/auth/oathkeeper/service-oathkeeper-maester-metrics.yml
apiVersion: v1
kind: Service
metadata:
  name: oathkeeper-maester-metrics
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: metrics
  selector:
    app.kubernetes.io/instance: oathkeeper
    app.kubernetes.io/name: oathkeeper
  type: ClusterIP
