kubernetes/raspberry-pi/auth/oathkeeper/service-oathkeeper-proxy.yml
apiVersion: v1
kind: Service
metadata:
  name: oathkeeper-proxy
  labels:
    app.kubernetes.io/instance: oathkeeper
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http-proxy
  selector:
    app.kubernetes.io/instance: oathkeeper
    app.kubernetes.io/name: oathkeeper
  type: ClusterIP
